:doc: Update run scripts